--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ plugins:
   - jekyll-paginate
 
 markdown: kramdown
-theme: minimaless
+# theme: minimaless
 # remote_theme: brettinternet/minimaless # uncomment to allow GitHub to build for GitHub Pages - https://github.com/blog/2464-use-any-theme-with-github-pages
 
 include:
